--- a/README
+++ b/README
@@ -24,3 +24,19 @@ https://github.com/visionmedia/expresso
 https://github.com/dannycoates/node-inspector
 https://github.com/mhevery/jasmine-node
 
+For simplicity sake I'll describe the process of getting it on Heroku:
+https://devcenter.heroku.com/articles/nodejs
+
+$ heroku create crud-bones-dev --stack cedar --remote heroku-dev
+$ git push heroku-dev master
+
+Or if you want to push to existing Heroku instance:
+
+$ git init 
+$ git add .
+$ git commit -m 'bundle for heroku-dev deploy'
+$ git remote add heroku-dev git@heroku.com:crud-bones-dev.git
+$ git push -f heroku-dev
+$ heroku config:add NODE_ENV=development --app crud-bones-dev
+
+
