--- a/README
+++ b/README
@@ -27,6 +27,7 @@ For simplicity sake I'll describe the process of getting it on Heroku:
 https://devcenter.heroku.com/articles/nodejs
 
 $ heroku create crud-bones-dev --stack cedar --remote heroku-dev
+$ heroku config:add NODE_ENV=development --app crud-bones-dev
 $ git push heroku-dev master
 
 Or if you want to push to existing Heroku instance:
@@ -35,7 +36,8 @@ $ git init
 $ git add .
 $ git commit -m 'bundle for heroku-dev deploy'
 $ git remote add heroku-dev git@heroku.com:crud-bones-dev.git
-$ git push -f heroku-dev
 $ heroku config:add NODE_ENV=development --app crud-bones-dev
+$ git push -f heroku-dev
+
 
 
