--- a/README
+++ b/README
@@ -38,7 +38,7 @@ $ git add .
 $ git commit -m 'bundle for heroku-dev deploy'
 $ git remote add heroku-dev git@heroku.com:crud-bones-dev.git
 $ heroku config:add NODE_ENV=development --app crud-bones-dev
-$ git push -f heroku-dev
+$ git push -f heroku-dev master
 
 
 
